Wishlist page component stub. Translations for header menu links.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,11 @@
 {
+  "header": {
+    "menu": {
+      "search": "Search",
+      "favorites": "My favorites",
+      "wishlist": "My wishlist"
+    }
+  },
   "showsTable": {
     "actions": {
       "details": "Details",
