Adding shows to wishlist.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,5 +15,11 @@
       "addToFavorites": "Add to favorites",
       "removeFromFavorites": "Remove from favorites"
     }
+  },
+  "favoritesShows": {
+    "emptyMessage": "You have no favorite tv shows."
+  },
+  "wishlistShows": {
+    "emptyMessage": "You have no wishlist shows."
   }
 }
