SignIn page & form

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,7 +6,8 @@
     "menu": {
       "search": "Search",
       "favorites": "My favorites",
-      "wishlist": "My wishlist"
+      "wishlist": "My wishlist",
+      "signIn": "Sign In"
     }
   },
   "showsTable": {
