--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -6,7 +6,8 @@
     "menu": {
       "search": "Szukaj",
       "favorites": "Ulubione",
-      "wishlist": "Lista życzeń"
+      "wishlist": "Lista życzeń",
+      "signIn": "Logowanie"
     }
   },
   "showsTable": {
